--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,5 @@
 name = "jai-bhavani-bill-generator"
 compatibility_date = "2026-01-14"
 
-# Deploy static assets
 [site]
-bucket = "./dist"
+bucket = "./"
