--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,33 @@
-node_modules/
-dist/
-.DS_Store
-*.log
-.vite/
-
-
-
-# =========================
-# Node dependencies
-# =========================
+# Dependencies
 node_modules/
 
-# =========================
 # Build output
-# =========================
-build/
 dist/
 
-# =========================
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Keep example env file
+!.env.example
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+.DS_Store
+Thumbs.db
+
 # Logs
-# =========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-# =========================
-# Environment variables
-# =========================
-.env
-.env.local
-.env.development
-.env.production
-.env.test
-
-# =========================
-# Framework specific
-# =========================
-.next/
-out/
-
-# =========================
-# OS files
-# =========================
-.DS_Store
-Thumbs.db
-
-# =========================
-# Editor settings
-# =========================
-.vscode/
-.idea/
-.history/
+lerna-debug.log*
