--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Copy this file to .env and update with your backend URL
 
 # For local development
-VITE_API_BASE_URL=http://localhost:9000
+# VITE_API_BASE_URL=http://localhost:9000
 
 # For production (example)
-# VITE_API_BASE_URL=https://thepartykart.com
+VITE_API_BASE_URL=https://thepartykart.com
 # VITE_API_BASE_URL=http://13.83.89.57:9000
